[package]
name = "visceral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
base64 = "0.13.0"
clap = { version = "3.2.22", features = ["derive"] }
scraper = { version = "0.13.0", default-features = false }
serde_json = "1.0.85"
sha2 = "0.10.6"
ureq = { version = "2.5.0", default-features = false, features = ["tls"] }
